--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,10 @@ table td {
   text-align: center;
 }
 
+button.btn {
+  padding: 21px;
+}
+
 .btn {
   width: 12em;
   display: inline-block;
@@ -76,7 +80,7 @@ table td {
   background-color: #104A75;
   padding: 15px;
   margin: 10px;
-  transition: .5s ;
+  /* transition: .5s ; */
   text-decoration: none;
 }
 .btn:hover {
