--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 
 #quiz-box {
   position: absolute;
-  top: 15%;
+  top: 20%;
   left: 10%;
   right: 10%;
   width: 80%;
@@ -24,12 +24,30 @@ body {
 }
 
 .quiz,
-.toast,
 .result {
   font-size: 4rem;
   font-weight: 400;
   line-height: 1.1;
   position: relative;
+  margin: 0;
+}
+
+.toast {
+  width: 80%;
+  position: absolute;
+  top: 5%;
+  left: 10%;
+  right: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+}
+
+.toast p {
+  font-size: 2rem;
+  font-weight: 200;
   margin: 0;
 }
 
@@ -103,8 +121,6 @@ button.btn {
 .btn-result {
   background-color: #fd9800;
   border-color:#fd9800;
-  display: block;
-  margin: 2rem auto;
 }
 
 .btn:focus {
